# cloud-first-timeseries-pipeline

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  atlas.hcl  pyproject.toml  tox.ini
.claude/: CLAUDE.md
.opencode/skills/make-ci/: SKILL.md
.opencode/skills/make-infra/: SKILL.md
.opencode/skills/make-kafka/: SKILL.md
.opencode/skills/make-quality/: SKILL.md
.opencode/skills/make-test/: SKILL.md
.opencode/skills/make-utils/: SKILL.md
airflow/config/: airflow.cfg
airflow/dags/: energy_charts_feature_pipeline.py  energy_charts_pipeline.py  feature_collection_request.py  heartbeat_pipeline.py  test_pipeline.py
feast/feature_repo/: data_sources.py  entities.py  feature_store.yaml  feature_views.py
infra/docker/: docker-compose.yml
infra/docker/feast/: Dockerfile
migrations/: 20260314120000_init_raw_schema.sql  20260330120000_create_heartbeat_events.sql  atlas.sum
scripts/: bootstrap_kafka_topics.py  print_db_values.py  trigger_energy_charts_backfill.py
services/db-migrations/: Dockerfile  pyproject.toml
services/db-migrations/src/: main.py
services/energy-charts-backfill-service/: Dockerfile  pyproject.toml
services/energy-charts-backfill-service/src/: main.py
services/energy-charts-collector/: Dockerfile  pyproject.toml
services/energy-charts-collector/src/: collector.py  main.py  schema.py  storage.py
services/energy-charts-collector/src/energy_charts_api_client/: README.md  __init__.py
services/energy-charts-collector/src/energy_charts_api_client/api/import_export/: cross_border_electricity_trading_cbet_get.py  cross_border_physical_flows_cbpf_get.py
services/energy-charts-collector/src/energy_charts_api_client/api/power/: frequency_frequency_get.py  installed_power_installed_power_get.py  public_power_forecast_public_power_forecast_get.py  public_power_public_power_get.py  total_power_total_power_get.py
services/energy-charts-collector/src/energy_charts_api_client/api/prices/: day_ahead_price_price_get.py
services/energy-charts-collector/src/energy_charts_api_client/api/ren_share/: ren_share_daily_avg_ren_share_daily_avg_get.py  renewable_share_forecast_ren_share_forecast_get.py  solar_share_daily_avg_solar_share_daily_avg_get.py  solar_share_solar_share_get.py  traffic_signal_signal_get.py  wind_offshore_share_daily_avg_wind_offshore_share_daily_avg_get.py  wind_offshore_share_wind_offshore_share_get.py  wind_onshore_share_daily_avg_wind_onshore_share_daily_avg_get.py  wind_onshore_share_wind_onshore_share_get.py
services/energy-charts-collector/src/energy_charts_api_client/models/: __init__.py  cross_border_model.py  daily_avg_dict.py  frequency_model.py  installed_model.py  named_data.py  price_model.py  production_model.py  public_power_forecast_model.py  ren_share_model.py  share_model.py  traffic_model.py
services/energy-charts-collector/tests/: conftest.py  test_extraction.py
services/energy-charts-collector/tests/fixtures/: public_power_sample.json
services/feature-view-service/: Dockerfile  pyproject.toml
services/feature-view-service/src/: main.py
services/heartbeat-consumer/: Dockerfile  pyproject.toml
services/heartbeat-consumer/src/: main.py
services/heartbeat-consumer/tests/: test_main.py
services/kafka-bootstrap/: Dockerfile  pyproject.toml
services/test-consumer/: Dockerfile  pyproject.toml
services/test-consumer/src/: main.py
services/test-consumer/tests/: test_main.py
shared/: __init__.py  pyproject.toml
shared/adapters/: __init__.py
shared/adapters/energy_charts/: __init__.py  collector.py
shared/config/: __init__.py  settings.py
shared/db/: __init__.py  base.py  models.py  repositories.py  session.py  settings.py
shared/db/models/: __init__.py  heartbeat.py
shared/energy_charts/: __init__.py  backfill.py  events.py  series.py  time.py
shared/heartbeat/: __init__.py  plot_offsets.py  service.py  trigger.py
shared/kafka/: __init__.py  config.py  consumer.py  producer.py  topics.py
shared/schemas/: __init__.py  energy_charts.py
tests/: test_config_settings.py  test_energy_charts_helpers.py  test_kafka_helpers.py  test_shared_db_models.py
tests/integration/: test_database_integration.py
