[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities for cloud-first-timeseries-pipeline"
requires-python = ">=3.10,<4.0"
dependencies = [
    "kafka-python>=2.3.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["shared*"]
