[project]
name = "db-migrations"
version = "0.1.0"
description = "Atlas migration runner and schema verifier"
requires-python = ">=3.10,<4.0"
dependencies = [
    "shared",
]

[tool.uv]
package = false

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
