[project]
name = "energy-charts-backfill-service"
version = "0.1.0"
description = "Kafka-triggered historical backfill for Energy Charts frequency data"
requires-python = ">=3.10,<4.0"
dependencies = [
    "kafka-python>=2.3.0",
    "psycopg[binary]>=3.3.0",
    "shared",
]

[tool.uv]
package = false

[tool.uv.sources]
shared = { workspace = true }
