[project]
name = "feature-view-service"
version = "0.1.0"
description = "Kafka consumer creating feature dashboard artifacts"
requires-python = ">=3.10,<4.0"
dependencies = [
    "kafka-python>=2.3.0",
    "matplotlib>=3.10.0",
    "pandas>=2.3.0",
    "psycopg[binary]>=3.3.0",
    "shared",
    "ydata-profiling>=4.16.0",
]

[tool.uv]
package = false

[tool.uv.sources]
shared = { workspace = true }
