[project]
name = "kafka-bootstrap"
version = "0.1.0"
description = "Kafka topic bootstrap service"
requires-python = ">=3.10,<4.0"
dependencies = [
    "shared",
]

[tool.uv]
package = false

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
