[project]
name = "test-consumer"
version = "0.1.0"
description = "Kafka consumer for raw.test.event topic"
requires-python = ">=3.10,<4.0"
dependencies = [
    "kafka-python>=2.3.0",
    "shared",
]

[tool.uv]
package = false

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
